--- a/popup.css
+++ b/popup.css
@@ -3,3 +3,14 @@
   height: 200px;
   overflow: auto;
 }
+.price-range {
+  display: flex;
+}
+.price-level {
+  font-size: 24px;
+  color: gray;
+  cursor: pointer;
+}
+.selected {
+  color: black;
+}
