--- a/popup.css
+++ b/popup.css
@@ -1,16 +1,42 @@
 .popup-container {
-  width: 300px;
-  height: 200px;
-  overflow: auto;
+    width: 300px;
+    height: 200px;
+    overflow: auto;
 }
+
 .price-range {
-  display: flex;
+    display: flex;
 }
+
 .price-level {
-  font-size: 24px;
-  color: gray;
-  cursor: pointer;
+    font-size: 24px;
+    color: gray;
+    cursor: pointer;
 }
+
 .selected {
-  color: black;
+    color: black;
 }
+/*
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+*/
+.loading-wheel {
+    border: 4px solid rgba(255, 255, 255, 0.3); /* You can adjust the color and opacity here */
+    border-top: 4px solid #3498db; /* Adjust the color to your preference */
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite; /* Apply the animation */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
